--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxtjs/supabase": "^1.4.2",
     "@tailwindcss/typography": "^0.5.15",
     "@vueuse/core": "^11.2.0",
     "@vueuse/nuxt": "^11.2.0"
