--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@nuxtjs/supabase": "^1.4.2",
+    "@prisma/client": "^5.22.0",
     "@tailwindcss/typography": "^0.5.15",
     "@vueuse/core": "^11.2.0",
     "@vueuse/nuxt": "^11.2.0"
