--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.2",
     "nuxt": "^3.14.159",
