--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^5.22.0",
     "@tailwindcss/typography": "^0.5.15",
     "@vueuse/core": "^11.2.0",
-    "@vueuse/nuxt": "^11.2.0"
+    "@vueuse/nuxt": "^11.2.0",
+    "daisyui": "^4.12.14"
   }
 }
