--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@prisma/client": "^5.22.0",
     "@tailwindcss/typography": "^0.5.15",
     "@vueuse/core": "^11.2.0",
-    "pinia": "^2.2.6"
+    "pinia": "^2.2.6",
     "@vueuse/nuxt": "^11.2.0",
     "daisyui": "^4.12.14"
   }
