--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/image": "^1.8.1",
     "@nuxtjs/supabase": "^1.4.2",
     "@pinia/nuxt": "^0.7.0",
     "@prisma/client": "^5.22.0",
     "@tailwindcss/typography": "^0.5.15",
     "@vueuse/core": "^11.2.0",
-    "pinia": "^2.2.6",
     "@vueuse/nuxt": "^11.2.0",
-    "daisyui": "^4.12.14"
+    "daisyui": "^4.12.14",
+    "pinia": "^2.2.6"
   }
 }
