--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.2",
     "nuxt": "^3.14.159",
+    "stripe": "^17.3.1",
     "vue": "latest",
     "vue-router": "latest"
   },
